--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
  *= require_self
  *= require jquery-ui/datepicker
  *= require jquery.jcrop
+ *= require chosen
  */	
 @import 'bootstrap-sprockets';
 @import "bootstrap";
