--- a/app/views/table_specifications/_product.html.erb
+++ b/app/views/table_specifications/_product.html.erb
@@ -1,1 +1,1 @@
-<option value="<%= product.id %>"><%= product.model.titleize %></option>
+<option value="<%= product.id %>" id="10"><%= product.article %></option>
