--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,12 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
  *= require jquery-ui/datepicker
  *= require jquery.jcrop
- *= require chosen
+ *= require jquery.Jcrop.min
  */	
 @import 'bootstrap-sprockets';
-@import "bootstrap";
+@import 'bootstrap';
+@import 'chosen';
+@import 'table_specifications';
