--- a/app/views/photos/new.js.erb
+++ b/app/views/photos/new.js.erb
@@ -1,8 +1,8 @@
 // Add the dialog title
-$('#dialog h3').html("<%= t('change_image') %>");
+$('#dialog h3').html("<i class='glyphicon glyphicon-plus'></i><%= t('products.new_product') %>");
  
-// Render the edit form
-$('.modal-body').html('<%= j render("form_image") %>');
+// Render the new form
+$('.modal-body').html('<%= j render("field_form") %>');
  
 // Show the dynamic dialog
 $('#dialog').modal("show");
