--- a/app/views/table_specifications/factory/_form.html.erb
+++ b/app/views/table_specifications/factory/_form.html.erb
@@ -1,1 +1,6 @@
+<% if @factory.id == factory.id %>
+  <option value="<%= @factory.id %>" selected="selected"><%= @factory.brand %></option>
+<% else %>
   <option value="<%= factory.id %>" ><%= factory.brand %></option>
+<% end %>
+
