--- a/app/views/table_specifications/size_image/_first.html.erb
+++ b/app/views/table_specifications/size_image/_first.html.erb
@@ -1,5 +1,5 @@
 <% unless @size_image.nil? %>
-	<%= link_to image_tag(@size_image.img.url), "#", class: "invoker" %>
+	<%= link_to image_tag(@size_image.img.url, value: @size_image.id), "#", class: "invoker" %>
 <% else %>
 	<%= link_to image_tag('UploadDark.png'), "#", {class: "invoker", id: "upload_dark"} %>
 <% end %>
