--- a/app/views/table_specifications/discount/_dialog_table.html.erb
+++ b/app/views/table_specifications/discount/_dialog_table.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade" id="modalfactory" tabindex="-1" role="dialog" aria-labelledby="Factory Discount">
+<div class="modal fade" id="modalfactory_table" tabindex="-1" role="dialog" aria-labelledby="Factory Discount">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body row" >
