--- a/app/views/table_specifications/discount/_form.html.erb
+++ b/app/views/table_specifications/discount/_form.html.erb
@@ -1,9 +1,10 @@
 <div class="col-sm-4">
 	<div class="name">Скидка фабрики %</div>
 	<% if @discounts.length  <= 1 %>
-		<%= @discounts.first.percent %>
+		<span value="<%= @discounts.first.id %>" id="disc"><%= @discounts.first.percent %></span>
 	<% else %>
-		<%= select("post", "factory_id", @discounts.collect {|p| [ p.percent, p.id ] },{ include_blank: false }) %>
+
+		<%= select("discount","collect", options_for_select(@discounts.collect {|p| [ p.percent, p.id ] }, @table_specification.discount_id), {}, {class: "discounts"}) %>
 	<% end %> 
 </div>
 <div class="col-sm-4">
@@ -13,6 +14,10 @@
 <div class="col-sm-4">
 	<div class="field">
 			Добавить к прайсу <br>
-			<%= number_field_tag :increment_discount_modal, 33 %>
+
+			<input type="number" class="increment_discount_modal" value="<%= @table_specification.increment_discount %>">
 	</div>
+</div>
+<div class="col-sm-12 modal-description">
+	<p><%= @factory.note %></p>
 </div>
