--- a/app/views/table_specifications/photo/_first.html.erb
+++ b/app/views/table_specifications/photo/_first.html.erb
@@ -1,5 +1,5 @@
 <% unless @photo.nil? %>
-	<%= link_to image_tag(@photo.img.url), "#", class: "invoker" %>
+	<%= link_to image_tag(@photo.img.url, value: @photo.id), "#", class: "invoker" %>
 <% else %>
 	<%= link_to image_tag('UploadDark.png'), "#", {class: "invoker", id: "upload_dark"} %> 
 <% end %>
