--- a/app/views/table_specifications/type_furniture/_form.html.erb
+++ b/app/views/table_specifications/type_furniture/_form.html.erb
@@ -1,5 +1,5 @@
-<% if type_furniture.name == @type_furniture.to_s %>
-	<option value="<%=  %>" id="<%=  %>" selected="selected" ><%= @type_furniture %></option>
+<% if type_furniture.id == @type_furniture.id %>
+	<option value="<%= type_furniture.id %>" id="" selected="selected" ><%= @type_furniture.name %></option>
 <% else %>
-  <option value="<%= type_furniture.name %>" id="<%= type_furniture.id %>"><%= type_furniture.name %></option>
+  <option value="<%= type_furniture.id %>" id=""><%= type_furniture.name %></option>
 <% end %>
